<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/app_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:typeface="serif"
        android:textColor="@color/MintCream"
        android:gravity="center"
...
        android:textColor="@color/MintCream"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/home_button"
        android:textSize="12sp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/solve"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/solve"
        android:layout_width="95dp"
        android:layout_height="32dp"
...
